# System_Operation_Project

./: CMakeLists.txt  Caltrain-runner.c  Caltrain.c  Caltrain.h  IOinC.c  Readme.md  calc.c  caltrain  caltrain.c  constantEnviroment.text  main.c  projectRequirement.txt  reaction  readme.md  requirement.txt  sendMail.h  thread_UseMutex.c  thread_mutex.c
lib/: calc.h
